# rust-id3

./: COMPLIANCE.txt  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: filetags.rs  id3v1.rs  id3v2.rs  lib.rs  macros.rs  parsers.rs  tag.rs  util.rs
src/audiotag/: mod.rs
src/frame/: content.rs  field.rs  flags.rs  mod.rs
src/frame/stream/: mod.rs  v2.rs  v3.rs  v4.rs
src/id3v2/: error.rs  mod.rs  simple.rs
src/id3v2/frame/: encoding.rs  field.rs  flags.rs  frameinfo.rs  mod.rs  picture.rs  unsync.rs
src/id3v2/frame/stream/: mod.rs  v2.rs  v3.rs  v4.rs
tests/: track.rs  year.rs
